--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* resets */
 body,
 h1,
 h2,
@@ -6,32 +7,40 @@ ul {
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   background-color: #f9fafc;
-  color: #000;
 }
+
 header {
   margin: 20px;
 }
+
 h1 {
   color: #000;
   font-size: 16px;
-  font-weight: 600;
+  /* font-size: 1em; */
 }
-.header-nav li {
-  list-style: none;
-}
-header nav ul {
+
+.header-nav ul {
   display: flex;
   flex-direction: column;
 }
 
+.header-nav li {
+  list-style: none;
+}
+
 .header-nav a,
-.description a,
+.description,
 .footer-nav a {
   color: #69696a;
+}
+
+.header-nav a {
+  display: block;
 }
 
 .header-nav a,
@@ -39,17 +48,15 @@ header nav ul {
   text-decoration: none;
 }
 
-.hire-us,
+.hire-us a,
 .cta {
   background-color: #000;
   color: #fff;
   border-radius: 10px;
-  text-align: center;
-  margin: 10px;
 }
 
 .hire-us a {
-  padding: 10px;
+  padding: 5px;
 }
 
 main {
@@ -58,16 +65,17 @@ main {
   flex-direction: column;
 }
 
-.description-heading {
+.despription-heading {
   color: #000;
 }
+
 .description {
-  border-left: 2px solid #69696a;
-  padding-left: 10px;
-  padding-bottom: 10px;
+  border-left: 3px solid #69696a;
+  padding-left: 20px;
 }
 
 .chirpus-footer {
+  padding: 10px;
   color: #000;
 }
 
@@ -76,24 +84,90 @@ main {
   font-weight: 400;
   font-size: 16px;
   border: none;
+  width: 100%;
 }
 
 footer {
-  background-color: rgba(247, 193, 162, 0.7);
   position: fixed;
-  margin: 20px;
   bottom: 0;
   width: 100%;
-  margin: 0;
+  background-color: rgba(247, 193, 162, 0.7);
   display: flex;
   justify-content: space-between;
 }
 
 .footer-nav ul {
   display: flex;
-  list-style-type: none;
-  padding: 5px;
 }
 
 .footer-nav li {
-  padding: 5px;
+  padding: 10px;
+  list-style: none;
+}
+
+@media only screen and (min-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header-nav ul {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .header-nav li {
+    padding: 0 10px;
+  }
+
+  main {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .text {
+    width: 50%;
+  }
+
+  .cta {
+    height: 100%;
+    width: 50%;
+  }
+  .circles-container {
+    position: relative;
+    flex: 1;
+  }
+
+  .circle-1 {
+    background: rgba(247, 136, 167, 0.6);
+    width: 200px;
+    height: 200px;
+    right: 50px;
+    bottom: 0;
+    top: 0;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 3;
+  }
+  .circle-2 {
+    background: rgba(247, 193, 162, 0.7);
+    width: 150px;
+    height: 150px;
+    top: 100px;
+    right: 0;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 2;
+  }
+  .circle-3 {
+    background: rgba(207, 130, 213, 0.6);
+    width: 100px;
+    height: 100px;
+    right: 0;
+    top: 35px;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+  }
+}
